Finish HTML buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div id="calculator">
+        <div class="digits-div">
+        </div>
+    </div>
 </body>
 </html>
