Write working buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="calculator">
         <div class="digits-div">
+            <input type="text" class ="display">
         </div>
     </div>
 </body>
