Complete operating calculator

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="header">Integer calculator for Odin Project.</div>
     <div id="calculator">
         <div class="digits-div">
-            <input type="text" class ="display">
+            <input type="text" class ="display" type="text" readonly>
         </div>
     </div>
+    <div id="footer">made by Edison</div>
 </body>
 </html>
